<!-- Generated by scripts/configure.py -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.machinezoo.sourceafis</groupId>
	<artifactId>sourceafis-cli</artifactId>
	<version>2.0.0</version>

	<name>SourceAFIS CLI</name>
	<description>Command-line interface for SourceAFIS.</description>
	<url>https://sourceafis.machinezoo.com/cli</url>
	<inceptionYear>2021</inceptionYear>

	<licenses>
		<license>
			<name>Apache-2.0</name>
			<url>https://github.com/robertvazan/sourceafis-cli-java/blob/master/LICENSE</url>
		</license>
	</licenses>

	<organization>
		<name>Robert Važan</name>
		<url>https://robert.machinezoo.com/</url>
	</organization>
	<developers>
		<developer>
			<name>Robert Važan</name>
			<email>robert.vazan@tutanota.com</email>
			<url>https://robert.machinezoo.com/</url>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:https://github.com/robertvazan/sourceafis-cli-java.git</connection>
		<developerConnection>scm:git:https://github.com/robertvazan/sourceafis-cli-java.git</developerConnection>
		<url>https://github.com/robertvazan/sourceafis-cli-java</url>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>17</maven.compiler.release>
		<exec.mainClass>com.machinezoo.sourceafis.cli/com.machinezoo.sourceafis.cli.Main</exec.mainClass>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.machinezoo.stagean</groupId>
			<artifactId>stagean</artifactId>
			<version>1.2.0</version>
		</dependency>
		<dependency>
			<groupId>com.machinezoo.sourceafis</groupId>
			<artifactId>sourceafis</artifactId>
			<version>3.16.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.12.0</version>
		</dependency>
		<dependency>
			<groupId>one.util</groupId>
			<artifactId>streamex</artifactId>
			<version>0.8.1</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.36</version>
		</dependency>
		<dependency>
			<groupId>org.openjdk.jol</groupId>
			<artifactId>jol-core</artifactId>
			<version>0.16</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
			</plugin>
		</plugins>
	</build>
</project>
